utp/compII/toscal/tests/semantic/success/spare-variable.pas
program test_unused_variable;
var x, y : integer;

procedure p;
var k, j : integer;
begin
	k := 10;
end;

begin
	x := 10;
end.
