utp/compII/toscal/tests/semantic/fail/redeclared-function.pas
program complain_about_redeclared_functions;
var a, b : integer;

function f : integer;
var c : integer;
begin
	b := 10;
	c := 10;
end;

procedure p;
var f : char;
begin
	f := '?';
end;

begin
	l
end;
